test/assets/invalid/application/add-arg-at-start.hs
a :: Int
a = seq 1

s :: a -> b -> b
s a b = b